trunk/Archive2/5b/96bee43bc57e8f/output
main.cpp:8:9: error: non-const lvalue reference to type 'int' cannot bind to a temporary of type 'int'
   int &num2 = refReturn(num1); //Compile Error
        ^      ~~~~~~~~~~~~~~~
1 error generated.
